Your commit message here

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -20,7 +20,7 @@
     "noUncheckedSideEffectImports": true,
 
     "composite": true,
-    "noEmit": false
+    "emitDeclarationOnly": true
   },
   "include": ["vite.config.ts"]
 }
