update profilepic to cloudanery and change it in dynamo db + delete user

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/lib-dynamodb": "^3.772.0",
     "@types/mjml": "^4.7.4",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
