--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
-    "@types/axios": "^0.9.36",
+    "@pdfme/common": "^5.3.15",
+    "@pdfme/ui": "^5.3.15",
     "@types/recharts": "^1.8.29",
     "antd": "^5.24.2",
-    "axios": "^1.8.3",
-    "file-saver": "^2.0.5",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
@@ -32,11 +30,11 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "eslint-config-prettier": "^10.0.2",
-    "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
