--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.2.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "suneditor": "^2.47.5",
+    "suneditor-react": "^3.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
