--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@aws-sdk/lib-dynamodb": "^3.774.0"
+    "@aws-sdk/lib-dynamodb": "^3.774.0",
+    "react-pdf": "^9.2.1"
   },
   "devDependencies": {
     "@types/aws-sdk": "^0.0.42"
