--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@pdfme/common": "^5.3.15",
     "@pdfme/ui": "^5.3.15",
     "@types/recharts": "^1.8.29",
+    "@xrenders/schema-builder": "^1.0.0-alpha.19",
     "antd": "^5.24.2",
+    "moveable": "^0.53.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
     "suneditor": "^2.47.5",
