--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@tiptap/core": "^2.11.7",
     "@types/axios": "^0.9.36",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.3",
     "react-pdf": "^9.2.1"
   },
   "devDependencies": {
