made canvas wrapper, option to input text and add signature -  signature not properly faced on the pdf

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "moveable": "^0.53.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
+    "re-resizable": "^6.11.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-moveable": "^0.56.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.2.0",
