--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-dynamodb": "^3.772.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.772.0",
+    "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@types/mjml": "^4.7.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
@@ -33,6 +34,7 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "pdf-parse": "^1.1.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
