--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.772.0",
-    "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/lib-dynamodb": "^3.772.0",
+    "@aws-sdk/client-dynamodb": "^3.777.0",
+    "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/lib-dynamodb": "^3.778.0",
     "@aws-sdk/s3-request-presigner": "^3.806.0",
     "@types/mjml": "^4.7.4",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
@@ -28,8 +30,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mjml": "^4.15.3",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
@@ -40,15 +42,15 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.14",
     "@types/nodemailer": "^6.4.17",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^9.23.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
