--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@pdfme/common": "^5.3.15",
     "@pdfme/ui": "^5.3.15",
     "@syncfusion/ej2-react-pdfviewer": "^29.1.35",
+    "@types/moment": "^2.11.29",
     "@types/recharts": "^1.8.29",
     "antd": "^5.24.2",
     "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "moveable": "^0.53.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.10.38",
