--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,13 @@
     "pdfjs-dist": "^4.10.38",
     "re-resizable": "^6.11.2",
     "react": "^19.0.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "react-moveable": "^0.56.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.2.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.3",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1"
   },
