--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1"
   },
