--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/recharts": "^1.8.29",
     "antd": "^5.24.2",
     "axios": "^1.8.4",
+    "framer-motion": "^12.15.0",
     "moment": "^2.30.1",
     "moveable": "^0.53.0",
     "pdf-lib": "^1.17.1",
