--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.9",
     "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1",
+    "stream-chat": "^8.60.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
