--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@ant-design/icons": "^5.6.1",
     "@pdfme/common": "^5.3.15",
     "@pdfme/ui": "^5.3.15",
+    "@stream-io/video-react-sdk": "^1.18.1",
     "@syncfusion/ej2-react-pdfviewer": "^29.1.35",
     "@types/moment": "^2.11.29",
     "@types/recharts": "^1.8.29",
     "antd": "^5.24.2",
     "axios": "^1.8.4",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.15.0",
     "moment": "^2.30.1",
     "moveable": "^0.53.0",
@@ -33,11 +35,14 @@
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
+    "stream-chat": "^9.3.0",
+    "stream-chat-react": "^13.0.5",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
